# VoiceOver2

./: .gitignore  README.md  pyproject.toml
tests/: test_beep.py
voiceover2/: __init__.py  __main__.py  beep.py  gui.py
